src/main/java/org/drools/lang/iri/iriParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g 2010-11-27 00:20:02

  package org.drools.lang.iri;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class iriParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COLON", "QUESTION_MARK", "GATE", "DBL_SLASH", "ALPHA", "DIGIT", "PLUS", "MINUS", "DOT", "AT", "IUNRESERVED", "PCT_ENCODED", "SUB_DELIMS", "SLASH", "IPRIVATE", "LEFT_SQUARE", "RIGHT_SQUARE", "HEXDIG", "DEC_OCTET", "UCSCHAR", "EOL", "WS"
    };
    public static final int RIGHT_SQUARE=20;
    public static final int DEC_OCTET=22;
    public static final int IPRIVATE=18;
    public static final int MINUS=11;
    public static final int HEXDIG=21;
    public static final int EOF=-1;
    public static final int ALPHA=8;
    public static final int UCSCHAR=23;
    public static final int COLON=4;
    public static final int AT=13;
    public static final int IUNRESERVED=14;
    public static final int WS=25;
    public static final int EOL=24;
    public static final int SLASH=17;
    public static final int QUESTION_MARK=5;
    public static final int SUB_DELIMS=16;
    public static final int DBL_SLASH=7;
    public static final int PLUS=10;
    public static final int DIGIT=9;
    public static final int DOT=12;
    public static final int LEFT_SQUARE=19;
    public static final int GATE=6;
    public static final int PCT_ENCODED=15;

    // delegates
    // delegators


        public iriParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public iriParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return iriParser.tokenNames; }
    public String getGrammarFileName() { return "/home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g"; }


    public static class iri_reference_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "iri_reference"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:16:1: iri_reference : ( iri | irelative_ref );
    public final iriParser.iri_reference_return iri_reference() throws RecognitionException {
        iriParser.iri_reference_return retval = new iriParser.iri_reference_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        iriParser.iri_return iri1 = null;

        iriParser.irelative_ref_return irelative_ref2 = null;



        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:17:3: ( iri | irelative_ref )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:17:5: iri
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_iri_in_iri_reference67);
                    iri1=iri();

                    state._fsp--;

                    adaptor.addChild(root_0, iri1.getTree());

                    }
                    break;
                case 2 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:18:5: irelative_ref
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_irelative_ref_in_iri_reference74);
                    irelative_ref2=irelative_ref();

                    state._fsp--;

                    adaptor.addChild(root_0, irelative_ref2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "iri_reference"

    public static class absolute_iri_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "absolute_iri"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:21:1: absolute_iri : scheme COLON ihier_part ( QUESTION_MARK iquery )? ;
    public final iriParser.absolute_iri_return absolute_iri() throws RecognitionException {
        iriParser.absolute_iri_return retval = new iriParser.absolute_iri_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COLON4=null;
        Token QUESTION_MARK6=null;
        iriParser.scheme_return scheme3 = null;

        iriParser.ihier_part_return ihier_part5 = null;

        iriParser.iquery_return iquery7 = null;


        Object COLON4_tree=null;
        Object QUESTION_MARK6_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:22:3: ( scheme COLON ihier_part ( QUESTION_MARK iquery )? )
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:22:5: scheme COLON ihier_part ( QUESTION_MARK iquery )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_scheme_in_absolute_iri88);
            scheme3=scheme();

            state._fsp--;

            adaptor.addChild(root_0, scheme3.getTree());
            COLON4=(Token)match(input,COLON,FOLLOW_COLON_in_absolute_iri90); 
            COLON4_tree = (Object)adaptor.create(COLON4);
            adaptor.addChild(root_0, COLON4_tree);

            pushFollow(FOLLOW_ihier_part_in_absolute_iri92);
            ihier_part5=ihier_part();

            state._fsp--;

            adaptor.addChild(root_0, ihier_part5.getTree());
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:23:5: ( QUESTION_MARK iquery )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==QUESTION_MARK) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:23:6: QUESTION_MARK iquery
                    {
                    QUESTION_MARK6=(Token)match(input,QUESTION_MARK,FOLLOW_QUESTION_MARK_in_absolute_iri100); 
                    QUESTION_MARK6_tree = (Object)adaptor.create(QUESTION_MARK6);
                    adaptor.addChild(root_0, QUESTION_MARK6_tree);

                    pushFollow(FOLLOW_iquery_in_absolute_iri102);
                    iquery7=iquery();

                    state._fsp--;

                    adaptor.addChild(root_0, iquery7.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "absolute_iri"

    public static class iri_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "iri"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:27:1: iri : scheme COLON ihier_part ( QUESTION_MARK iquery )? ( GATE ifragment )? ;
    public final iriParser.iri_return iri() throws RecognitionException {
        iriParser.iri_return retval = new iriParser.iri_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COLON9=null;
        Token QUESTION_MARK11=null;
        Token GATE13=null;
        iriParser.scheme_return scheme8 = null;

        iriParser.ihier_part_return ihier_part10 = null;

        iriParser.iquery_return iquery12 = null;

        iriParser.ifragment_return ifragment14 = null;


        Object COLON9_tree=null;
        Object QUESTION_MARK11_tree=null;
        Object GATE13_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:28:3: ( scheme COLON ihier_part ( QUESTION_MARK iquery )? ( GATE ifragment )? )
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:28:5: scheme COLON ihier_part ( QUESTION_MARK iquery )? ( GATE ifragment )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_scheme_in_iri121);
            scheme8=scheme();

            state._fsp--;

            adaptor.addChild(root_0, scheme8.getTree());
            COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_iri123); 
            COLON9_tree = (Object)adaptor.create(COLON9);
            adaptor.addChild(root_0, COLON9_tree);

            pushFollow(FOLLOW_ihier_part_in_iri125);
            ihier_part10=ihier_part();

            state._fsp--;

            adaptor.addChild(root_0, ihier_part10.getTree());
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:29:5: ( QUESTION_MARK iquery )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==QUESTION_MARK) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:29:6: QUESTION_MARK iquery
                    {
                    QUESTION_MARK11=(Token)match(input,QUESTION_MARK,FOLLOW_QUESTION_MARK_in_iri133); 
                    QUESTION_MARK11_tree = (Object)adaptor.create(QUESTION_MARK11);
                    adaptor.addChild(root_0, QUESTION_MARK11_tree);

                    pushFollow(FOLLOW_iquery_in_iri135);
                    iquery12=iquery();

                    state._fsp--;

                    adaptor.addChild(root_0, iquery12.getTree());

                    }
                    break;

            }

            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:30:5: ( GATE ifragment )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==GATE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:30:6: GATE ifragment
                    {
                    GATE13=(Token)match(input,GATE,FOLLOW_GATE_in_iri146); 
                    GATE13_tree = (Object)adaptor.create(GATE13);
                    adaptor.addChild(root_0, GATE13_tree);

                    pushFollow(FOLLOW_ifragment_in_iri148);
                    ifragment14=ifragment();

                    state._fsp--;

                    adaptor.addChild(root_0, ifragment14.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "iri"

    public static class irelative_ref_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "irelative_ref"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:34:1: irelative_ref : irelative_part ( QUESTION_MARK iquery )? ( GATE ifragment )? ;
    public final iriParser.irelative_ref_return irelative_ref() throws RecognitionException {
        iriParser.irelative_ref_return retval = new iriParser.irelative_ref_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token QUESTION_MARK16=null;
        Token GATE18=null;
        iriParser.irelative_part_return irelative_part15 = null;

        iriParser.iquery_return iquery17 = null;

        iriParser.ifragment_return ifragment19 = null;


        Object QUESTION_MARK16_tree=null;
        Object GATE18_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:35:3: ( irelative_part ( QUESTION_MARK iquery )? ( GATE ifragment )? )
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:35:5: irelative_part ( QUESTION_MARK iquery )? ( GATE ifragment )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_irelative_part_in_irelative_ref165);
            irelative_part15=irelative_part();

            state._fsp--;

            adaptor.addChild(root_0, irelative_part15.getTree());
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:36:5: ( QUESTION_MARK iquery )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==QUESTION_MARK) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:36:6: QUESTION_MARK iquery
                    {
                    QUESTION_MARK16=(Token)match(input,QUESTION_MARK,FOLLOW_QUESTION_MARK_in_irelative_ref173); 
                    QUESTION_MARK16_tree = (Object)adaptor.create(QUESTION_MARK16);
                    adaptor.addChild(root_0, QUESTION_MARK16_tree);

                    pushFollow(FOLLOW_iquery_in_irelative_ref175);
                    iquery17=iquery();

                    state._fsp--;

                    adaptor.addChild(root_0, iquery17.getTree());

                    }
                    break;

            }

            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:37:5: ( GATE ifragment )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==GATE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:37:6: GATE ifragment
                    {
                    GATE18=(Token)match(input,GATE,FOLLOW_GATE_in_irelative_ref184); 
                    GATE18_tree = (Object)adaptor.create(GATE18);
                    adaptor.addChild(root_0, GATE18_tree);

                    pushFollow(FOLLOW_ifragment_in_irelative_ref186);
                    ifragment19=ifragment();

                    state._fsp--;

                    adaptor.addChild(root_0, ifragment19.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "irelative_ref"

    public static class ihier_part_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ihier_part"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:42:1: ihier_part : ( DBL_SLASH iauthority ipath_abempty | ipath_absolute | ipath_rootless | );
    public final iriParser.ihier_part_return ihier_part() throws RecognitionException {
        iriParser.ihier_part_return retval = new iriParser.ihier_part_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DBL_SLASH20=null;
        iriParser.iauthority_return iauthority21 = null;

        iriParser.ipath_abempty_return ipath_abempty22 = null;

        iriParser.ipath_absolute_return ipath_absolute23 = null;

        iriParser.ipath_rootless_return ipath_rootless24 = null;


        Object DBL_SLASH20_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:43:3: ( DBL_SLASH iauthority ipath_abempty | ipath_absolute | ipath_rootless | )
            int alt7=4;
            switch ( input.LA(1) ) {
            case DBL_SLASH:
                {
                alt7=1;
                }
                break;
            case SLASH:
                {
                alt7=2;
                }
                break;
            case COLON:
            case ALPHA:
            case DIGIT:
            case MINUS:
            case DOT:
            case AT:
            case IUNRESERVED:
            case PCT_ENCODED:
            case SUB_DELIMS:
                {
                alt7=3;
                }
                break;
            case EOF:
            case QUESTION_MARK:
            case GATE:
                {
                alt7=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:43:5: DBL_SLASH iauthority ipath_abempty
                    {
                    root_0 = (Object)adaptor.nil();

                    DBL_SLASH20=(Token)match(input,DBL_SLASH,FOLLOW_DBL_SLASH_in_ihier_part213); 
                    DBL_SLASH20_tree = (Object)adaptor.create(DBL_SLASH20);
                    adaptor.addChild(root_0, DBL_SLASH20_tree);

                    pushFollow(FOLLOW_iauthority_in_ihier_part215);
                    iauthority21=iauthority();

                    state._fsp--;

                    adaptor.addChild(root_0, iauthority21.getTree());
                    pushFollow(FOLLOW_ipath_abempty_in_ihier_part217);
                    ipath_abempty22=ipath_abempty();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_abempty22.getTree());

                    }
                    break;
                case 2 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:44:5: ipath_absolute
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ipath_absolute_in_ihier_part223);
                    ipath_absolute23=ipath_absolute();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_absolute23.getTree());

                    }
                    break;
                case 3 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:45:5: ipath_rootless
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ipath_rootless_in_ihier_part229);
                    ipath_rootless24=ipath_rootless();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_rootless24.getTree());

                    }
                    break;
                case 4 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:47:3: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ihier_part"

    public static class irelative_part_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "irelative_part"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:49:1: irelative_part : ( DBL_SLASH iauthority ipath_abempty | ipath_absolute | ipath_noscheme | );
    public final iriParser.irelative_part_return irelative_part() throws RecognitionException {
        iriParser.irelative_part_return retval = new iriParser.irelative_part_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DBL_SLASH25=null;
        iriParser.iauthority_return iauthority26 = null;

        iriParser.ipath_abempty_return ipath_abempty27 = null;

        iriParser.ipath_absolute_return ipath_absolute28 = null;

        iriParser.ipath_noscheme_return ipath_noscheme29 = null;


        Object DBL_SLASH25_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:50:3: ( DBL_SLASH iauthority ipath_abempty | ipath_absolute | ipath_noscheme | )
            int alt8=4;
            switch ( input.LA(1) ) {
            case DBL_SLASH:
                {
                alt8=1;
                }
                break;
            case SLASH:
                {
                alt8=2;
                }
                break;
            case ALPHA:
            case DIGIT:
            case MINUS:
            case DOT:
            case AT:
            case IUNRESERVED:
            case PCT_ENCODED:
            case SUB_DELIMS:
                {
                alt8=3;
                }
                break;
            case EOF:
            case QUESTION_MARK:
            case GATE:
                {
                alt8=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:50:5: DBL_SLASH iauthority ipath_abempty
                    {
                    root_0 = (Object)adaptor.nil();

                    DBL_SLASH25=(Token)match(input,DBL_SLASH,FOLLOW_DBL_SLASH_in_irelative_part250); 
                    DBL_SLASH25_tree = (Object)adaptor.create(DBL_SLASH25);
                    adaptor.addChild(root_0, DBL_SLASH25_tree);

                    pushFollow(FOLLOW_iauthority_in_irelative_part252);
                    iauthority26=iauthority();

                    state._fsp--;

                    adaptor.addChild(root_0, iauthority26.getTree());
                    pushFollow(FOLLOW_ipath_abempty_in_irelative_part254);
                    ipath_abempty27=ipath_abempty();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_abempty27.getTree());

                    }
                    break;
                case 2 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:51:5: ipath_absolute
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ipath_absolute_in_irelative_part260);
                    ipath_absolute28=ipath_absolute();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_absolute28.getTree());

                    }
                    break;
                case 3 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:52:5: ipath_noscheme
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ipath_noscheme_in_irelative_part266);
                    ipath_noscheme29=ipath_noscheme();

                    state._fsp--;

                    adaptor.addChild(root_0, ipath_noscheme29.getTree());

                    }
                    break;
                case 4 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:54:3: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "irelative_part"

    public static class scheme_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "scheme"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:59:1: scheme : ALPHA ( ALPHA | DIGIT | PLUS | MINUS | DOT )* ;
    public final iriParser.scheme_return scheme() throws RecognitionException {
        iriParser.scheme_return retval = new iriParser.scheme_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ALPHA30=null;
        Token set31=null;

        Object ALPHA30_tree=null;
        Object set31_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:60:2: ( ALPHA ( ALPHA | DIGIT | PLUS | MINUS | DOT )* )
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:60:5: ALPHA ( ALPHA | DIGIT | PLUS | MINUS | DOT )*
            {
            root_0 = (Object)adaptor.nil();

            ALPHA30=(Token)match(input,ALPHA,FOLLOW_ALPHA_in_scheme288); 
            ALPHA30_tree = (Object)adaptor.create(ALPHA30);
            adaptor.addChild(root_0, ALPHA30_tree);

            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:60:11: ( ALPHA | DIGIT | PLUS | MINUS | DOT )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( ((LA9_0>=ALPHA && LA9_0<=DOT)) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:
            	    {
            	    set31=(Token)input.LT(1);
            	    if ( (input.LA(1)>=ALPHA && input.LA(1)<=DOT) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set31));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "scheme"

    public static class iauthority_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "iauthority"
    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:69:1: iauthority : ( iuserinfo AT )? ihost ( COLON port )? ;
    public final iriParser.iauthority_return iauthority() throws RecognitionException {
        iriParser.iauthority_return retval = new iriParser.iauthority_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT33=null;
        Token COLON35=null;
        iriParser.iuserinfo_return iuserinfo32 = null;

        iriParser.ihost_return ihost34 = null;

        iriParser.port_return port36 = null;


        Object AT33_tree=null;
        Object COLON35_tree=null;

        try {
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:70:3: ( ( iuserinfo AT )? ihost ( COLON port )? )
            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:70:5: ( iuserinfo AT )? ihost ( COLON port )?
            {
            root_0 = (Object)adaptor.nil();

            // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:70:5: ( iuserinfo AT )?
            int alt10=2;
            alt10 = dfa10.predict(input);
            switch (alt10) {
                case 1 :
                    // /home/davide/Projects/Eclipse/workspace/DRLv6/src/main/resources/iri.g:70:6: iuserinfo AT
                    {
                    pushFollow(FOLLOW_iuserinfo_in_iauthority339);
                    iuserinfo32=iuserinfo();

                    state._fsp--;
